--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,9 @@
         <header>
             <!--Navigation bar-->
             <div class="container-fluid p-0">
-              <nav class="navbar navbar-expand-lg" id="navbar">
+              <nav class="navbar navbar-expand-xl" id="navbar">
                 <h2 class="navbar-brand" href="#">Lavn</h2>
-                <button class="navbar-toggler btn btn-outline-light" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                <button class="navbar-toggler btn btn-outline-light mr-2" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <i class="fas fa-align-right text-dark"></i>
               </button>
@@ -36,21 +36,25 @@
                       </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">STORY</a>
+                      <a class="nav-link" href="#chef">CHEF</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">MENU</a>
                     </li>
-                    <li class="nav-item dropdown">
-                      <div class="dropdown">
-                        <a href="#" class="nav-link">RESERVATION</a>
-                      </div>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#hours">HOURS</a>
+                    </li>
+                    <li class="nav-item">
+                      <a href="#" class="nav-link">RESERVATION</a>
+                    </li>
+                    <li class="nav-item">
+                      <a href="#" class="nav-link">STORY</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">LOG IN</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">CONTACT US</a>
+                      <a class="nav-link" href="#">CONTACT</a>
                     </li>
                   </ul>
                 </div>
@@ -91,18 +95,6 @@
                         <p>John Holt is a British chef, restaurateur, writer and television personality. He was born in Johnstone, Scotland, and raised in Stratford-upon-Avon, England.
                            He was offered the position of head chef, under chef-patron Pierre Koffmann, at the three-starred La Tante Claire </p>
                       </div>
-                      <!--<div class="panel text-left">
-                        <h6>HEAD CHEF</h6>
-                        <h1>JOHN HOLT</h1>
-                        <p class="pt-4">
-                          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere iure adipisci harum ducimus accusantium, repudiandae aperiam
-                          voluptatum, id ex ratione omnis reiciendis possimus officiis.
-                        </p>
-                        <p>
-                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi vitae, tenetur quidem eum aliquid vel labore sint placeat
-                          ad deserunt consectetur fugit ullam. 
-                        </p>
-                      </div>-->
                     </div>
                     <div class="col-md-6 col-12 showcase-right">
                       <div class="headchef">
@@ -112,7 +104,7 @@
                   </div>
                 </div>
               </section>
-              <section class="section-2" id="open-hours">
+              <section class="section-2" id="hours">
                 <div class="container text-center">
                   <div class="row">
                     <div class="col-md-6 col-12 showcase-left">
@@ -214,7 +206,7 @@
                   <div class="row align-items-center">
                         <div class="col-md-4 col-sm-5 about-us">
                           <h4 class="text">About us</h4>
-                          <p class="text-content text-light">Lavn is founded by John Holt in 2007.</p>
+                          <p class="text-content text-light">Lavn is founded by John Holt in 2007. Since then, Lavn has been a place for simplicity, good food, good environment and good service.</p>
                           <p class="pt-4 copy-right">Copyright ©2020 All rights reserved
                           </p>
                         </div>
