--- a/src/index.html
+++ b/src/index.html
@@ -83,8 +83,10 @@
               </div>
             </div>
           </header>
+          <!--End of Header-->
           <!--Main page-->
           <main>
+            <!--Section-1 Chef-->
             <section class="section-1" id="chef">
                 <div class="container text-center">
                   <div class="row">
@@ -108,9 +110,13 @@
                   </div>
                 </div>
               </section>
+              <!--End of Section-1 Chef-->
+              <!--Section-2 Menu-->
               <section class="section-2" id="menu">
 
               </section>
+              <!--End of Section-2 Menu-->
+              <!--Secton-3 Hours-->
               <section class="section-3" id="hours">
                 <div class="container text-center">
                   <div class="row">
@@ -169,97 +175,22 @@
                     </div>
                   </div>
                 </div>
-                <!--<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="5000">
-                  <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-                  </ol>
-                  <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <img class="d-block w-100" src="images/story_1.jpg" alt="First slide">
-                      <div class="carousel-caption text-center">
-                        <h1>Our Story</h1>
-                        <h3>Jonh Holt opened Lavn in 2010 after travelling to Vietnam and fell in love with the food.</h3>
-                      </div>
-                    </div>
-                    <div class="carousel-item">
-                      <img class="d-block w-100" src="images/story_2.jpg" alt="Second slide">
-                    </div>
-                    <div class="carousel-item">
-                      <img class="d-block w-100" src="images/story_3.jpg" alt="Third slide">
-                    </div>
-                    <div class="carousel-item">
-                      <img class="d-block w-100" src="images/story_4.jpg" alt="Fourth slide">
-                    </div>
-                    <div class="carousel-item">
-                      <img class="d-block w-100" src="images/chinh-le-duc-vuDXJ60mJOA-unsplash.jpg" alt="Fifth slide">
-                    </div>
-                  </div>
-                  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                  </a>
-                  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                  </a>
-                </div>-->
               </section>
-             <!-- <section class="section-5" id ="story">
-                <div class="swiper-container">
-                  <div class="swipper-wrapper">
-                    <div class="swiper-slide">
-                      <div class="card">
-                        <div class="sliderText">
-                          <h3>Slide One</h3>
-                        </div>
-                        <div class="content">
-                          <p>In 2010, John visited Vietnam and fell in love with the Vietnamese cuisine.</p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="swiper-slide">
-                      <div class="card">
-                        <div class="sliderText">
-                          <h3>Slide One</h3>
-                        </div>
-                        <div class="content">
-                          <p>In 2010, John visited Vietnam and fell in love with the Vietnamese cuisine.</p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="swiper-slide">
-                      <div class="card">
-                        <div class="sliderText">
-                          <h3>Slide One</h3>
-                        </div>
-                        <div class="content">
-                          <p>In 2010, John visited Vietnam and fell in love with the Vietnamese cuisine.</p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="swiper-slide">
-                      <div class="card">
-                        <div class="sliderText">
-                          <h3>Slide One</h3>
-                        </div>
-                        <div class="content">
-                          <p>In 2010, John visited Vietnam and fell in love with the Vietnamese cuisine.</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </section>-->
+              <!--End of section-3 Hours-->
+              <!--Section-4 Reservation-->
+              <section class="section-4" id="reservation">
+
+              </section>
+              <!--End of Section-4 Reservation-->
+              <!--Section-5 Story-->
               <section class="section-5" id="story">
                 <div class="swiper-container">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
                       <div class="imgbx" id="st">
+                        <div class="text">
                         <h1>OUR STORY</h1>
+                        </div>
                       </div>
                     </div>
                     <div class="swiper-slide">
@@ -267,8 +198,8 @@
                         <img src="images/story_1.jpg">
                       </div>
                       <div class="content">
-                        <h3>Slide One</h3>
-                        <p>In 2010, John visited Vietnam and fell in love with the Vietnamese cuisine.</p>
+                        <h3>Why Vietnam?</h3>
+                        <p>In 2007, John visited Ho Chi Minh city - Vietnam and was impressed by local cuisine and hospitable people.</p>
                       </div>
                     </div>
                     <div class="swiper-slide">
@@ -276,8 +207,9 @@
                         <img src="images/story_2.jpg">
                       </div>
                       <div class="content">
-                        <h3>Slide Two</h3>
-                        <p>In 2010, John visited Vietnam and fell in love with the Vietnamese cuisine.</p>
+                        <h3>Where in Vietnam?</h3>
+                        <p>Street food, defenitely! It is the cheapest and one of the most delicious places to find cuisine in Vietnam.
+                        </p>
                       </div>
                     </div>
                     <div class="swiper-slide">
@@ -285,8 +217,8 @@
                         <img src="images/story_3.jpg">
                       </div>
                       <div class="content">
-                        <h3>Slide Three</h3>
-                        <p>In 2010, John visited Vietnam and fell in love with the Vietnamese cuisine.</p>
+                        <h3>After the trip</h3>
+                        <p>John decided to strart a Vietnamese restaurant in Canada where people could enjoy the same taste as they were in Vietnam.</p>
                       </div>
                     </div>
                     <div class="swiper-slide">
@@ -294,8 +226,8 @@
                         <img src="images/story_4.jpg">
                       </div>
                       <div class="content">
-                        <h3>Slide Fourth</h3>
-                        <p>In 2010, John visited Vietnam and fell in love with the Vietnamese cuisine.</p>
+                        <h3>Since then</h3>
+                        <p>Lavn has been one of the most favorite restaurant for not only Vietnamese but also the foreigners.</p>
                       </div>
                     </div>
                     <div class="swiper-slide">
@@ -306,6 +238,18 @@
                   </div>
                 </div>
               </section>
+              <!--ENd of section-5 Story-->
+              <!--Section-6 Log In-->
+              <section class="section-6" id="logIn">
+
+              </section>
+              <!--End of Section-6 Log In-->
+              <!--Section-7 Contact-->
+              <section class="section-7" id="contact">
+
+              </section>
+              <!--End of Section-7 Contact-->
+              <!--Footer-->
               <div class="info-wrapper col-12">
                 <div class=" info wrapper">
                   <div class="row align-items-center">
@@ -352,6 +296,7 @@
                   </div>
                 </div>
               </div>
+              <!--End of footer-->
           </main>
           <footer>
 
@@ -413,7 +358,7 @@
         grabCursor: true,
         centeredSlides: true,
         slidesPerView: 'auto',
-        autoplay: {delay: 3000, },
+        autoplay: {delay: 4000, },
         coverflowEffect: {
           rotate: 50,
           stretch: 0,
